ghc-4335c07/testsuite/tests/patsyn/should_fail/records-exquant.stderr

records-exquant.hs:8:7: error:
    Cannot use record selector ‘a’ as a function due to escaped type variables
    Probable fix: use pattern-matching syntax instead
    In the expression: a (Showable True)
    In an equation for ‘qux’: qux = a (Showable True)

records-exquant.hs:10:7: error:
    Record update for insufficiently polymorphic field: a :: a
    In the expression: (Showable ()) {a = True}
    In an equation for ‘foo’: foo = (Showable ()) {a = True}
